wp-content/themes/design/src/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

a, a:hover, a:active {
    text-decoration: none;
}

.light {
    --primary: #fafafa;
    --secondary: #955251;
    --text: #121212;
}

.dark {
    --primary: #121212;
    --secondary: #955251;
    --text: #fafafa;
}

#root {
    min-height: 100vh;
    min-width: 320px;
    display: flex;
    flex-direction: column;
}

/* HEADER */

.header {
    padding: 10px;
    display: grid;
    grid-template-columns: 80px 1fr;
    grid-template-rows: 66px auto;
    align-items: center;
    background-color: var(--primary);
    user-select: none;
}

.logo img {
    width: 80px;
    height: 66px;
}

.nav-toggle {
    width: 35px;
    height: 28px;
    margin-left: auto;
    margin-right: 5px;
    margin-top: -8px;
    position: relative;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
}

.nav-toggle span {
    display: block;
    width: 100%;
    height: 4px;
    border-radius: 4px;
    background-color: var(--secondary);
    position: absolute;
}

.nav-toggle span:first-child {
    top: 0;
    left: 0;
}

.nav-toggle span:nth-child(2) {
    top: 12px;
    left: 0;
}

.nav-toggle span:last-child {
    bottom: 0;
    left: 0;
}

.nav-toggle-open span {
    top: 12px !important;
    left: 0;
}

.nav-toggle-open span:first-child {
    transform: rotate(45deg);
}

.nav-toggle-open span:nth-child(2) {
    display: none;
}

.nav-toggle-open span:last-child {
    transform: rotate(-45deg);
}

.nav {
    grid-column: 1/3;
    /* -10px removes header margins */
    margin: 10px -10px;
    display: flex;
    flex-direction: column;
    list-style: none;
    font-size: 20px;
    padding: 0 20px;
}

.nav-desktop {
    grid-column: auto;
    display: flex;
    flex-direction: row;
    margin-left: auto;
    min-width: fit-content;
    width: fit-content;
}

.nav-desktop .nav-link {
    margin: 0 5px;
    padding: 0 20px;
}

.nav-desktop .nav-link-with-submenu {
    position: relative;
    margin: 0 5px;
    padding: 0 20px;
}

.nav-desktop .nav-link-with-submenu:hover .nav-link-items {
    display: block !important;
}

.nav-desktop .nav-link-with-submenu p {
    white-space: nowrap;
}

.nav-desktop .nav-link-items {
    position: absolute;
    top: 25px;
    left: 0;
    right: 0;
    margin: 0;
    background-color: var(--primary);
}

.nav-desktop .nav-link-items .nav-link {
    margin: 15px 0;
}

.nav ul {
    list-style: none;
}

.nav-link, .nav-link-with-submenu {
    margin: 5px 0;
}

.nav-link a {
    color: var(--secondary);
}

.nav-link-with-submenu p {
    color: var(--secondary);
    display: flex;
    align-items: center;
}

.nav-link-with-submenu span {
    margin-left: 5px;
    display: flex;
    align-items: center;
}

.nav-link-items {
    margin-left: 10px;
}

/* MAIN */

.main {
    flex-grow: 1;
}

/* swiper news feed */

.swiper {
    width: 100%;
    aspect-ratio: 4 / 5;
}

.swiper-button-prev, .swiper-button-next {
    display: none;
}

.swiper-button-prev, .swiper-button-next {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: #fafafabb;
    -webkit-tap-highlight-color: transparent;
}

.swiper-button-prev::after, .swiper-button-next::after {
    font-size: 18px;
    color: var(--secondary);
    font-weight: 900;
}

.swiper-pagination-bullet {
    background: var(--secondary);
    opacity: 0.2;
}

.swiper-pagination-bullet-active {
    opacity: var(--secondary) 1;
}

.swiper-slide {
    text-align: center;
    font-size: 18px;
    background: #fff;

    /* Center slide text vertically */
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
}

.swiper-slide img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: fill;
}

.news-slide {
    width: 100%;
    height: 100%;
    position: relative;
}

.news-slide-data {
    position: absolute;
    top: auto;
    left: 0;
    right: 0;
    /* bottom pagination es 18 + 10 margin bottom  */
    bottom: 0;
    padding-bottom: 30px;
    display: flex;
    flex-direction: column;
    color: var(--text);
    background-image: linear-gradient(#fafafa, #fafafa00);
}

.news-slide-title, .news-slide-subtitle, .news-slide-date {
    padding: 2px 10px;
    text-align: justify;
}

.news-slide-title {
    font-size: 16px;
}

.news-slide-subtitle {
    font-size: 12px;
}

.news-slide-date {
    text-align: right;
    font-size: 12px;
    margin-right: 10px;
}

@media screen and (min-width: 500px) {
    .swiper {
        margin: 0 auto;
        height: 400px;
    }

    .swiper-button-prev, .swiper-button-next {
        display: flex;
    }

    .swiper-button-disabled {
        display: none;
    }

    .swiper-slide {
        width: 320px;
        height: 400px;
        opacity: 0.6;
    }

    .swiper-slide-active {
        opacity: 1;
    }
}

/* FOOTER */

.footer {
    height: 50px;
}

